This avoids horizontal scrollbars when they were not needed.

--- a/app/assets/stylesheets/layout/_work_package.sass
+++ b/app/assets/stylesheets/layout/_work_package.sass
@@ -234,6 +234,9 @@
     .form--field-container
       max-width: 400px
 
+.work-package-table--container
+  table.generic-table
+    width: calc(100% - 10px)
 
 %flex-grow-shrink-zero
   flex-grow: 0
